<resources>
    <string name="app_name">Bollywood WASticker</string>


    <string name="Bollywood_tray_image_content_description">Sticker Pack Tray Image</string>
    <string name="Bollywood_more_info_button">More info about sticker pack</string>
    <string name="Bollywood_add_to_whatsapp">Add to WhatsApp</string>
    <string name="add_button_content_description">Add sticker pack to WhatsApp</string>
    <string name="title_activity_sticker_packs_list">Sticker Packs</string>
    <string name="dot">•</string>

    <string name="Bollywood_title_activity_sticker_pack_details_single_pack">Sticker Pack</string>
    <string name="Bollywood_title_activity_sticker_pack_details_multiple_pack">Sticker details</string>
    <string name="Bollywood_title_activity_sticker_pack_info">Info</string>
    <string name="Bollywood_view_webpage">View webpage</string>
    <string name="Bollywood_send_email">Send email</string>
    <string name="Bollywood_privacy_policy">Privacy policy</string>
    <string name="Bollywood_error_adding_sticker_pack">Could not add this sticker pack. Please install the latest version of WhatsApp before adding sticker pack</string>
    <string name="Bollywood_error_message">Error: %s \nSee logcat for stack trace.</string>
    <string name="title_validation_error">Error with the pack</string>
    <string name="Bollywood_info_screen_tray_icon">Tray icon</string>

    <string name="Bollywood_details_pack_already_added">Sticker pack added to WhatsApp</string>
    <string name="Bollywood_info_send_email_to_prompt">Send email with</string>
    <string name="add_pack_fail_prompt_update_whatsapp">Sticker pack not added. If you\'d like to add it, make sure you update to the latest version of WhatsApp.</string>
    <string name="add_pack_fail_prompt_update_play_link">Update</string>
    <string name="Bollywood_cannot_find_play_store">Google Play is not installed on the device.</string>
    <string name="Bollywood_str_gift">gift</string>

    <!-- Facebook Audience Network -->
    <string name="FAN_Intertitial_ADS">IMG_16_9_APP_INSTALL#182230885712915_182234475712556</string>
    <string name="FAN_BAnner_ADS">IMG_16_9_APP_INSTALL#182230885712915_182234792379191</string>
    <string name="FAN_Native_Ads">IMG_16_9_APP_INSTALL#182230885712915_182234652379205</string>
    <!-- Enable Banner With Native Ads OUI|NON -->
    <string name="enablebannerwithnativeads">OUI</string>

    <string name="Bollywood_swap">SWIPE TO START</string>
    <string name="Bollywood_rate_us">Rate Us</string>
</resources>
