<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_above="@+id/lladview"
        android:id="@+id/img_banner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:src="@drawable/banner_images" />

    <LinearLayout
        android:id="@+id/lladview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_start"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_nativead_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/banner_background">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="310dp">

                <LinearLayout
                    android:id="@+id/hscrollContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal" />

                <FrameLayout
                    android:id="@+id/fl_adplaceholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true" />

                <LinearLayout
                    android:id="@+id/ll_native"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:rotation="-45"
                        android:src="@drawable/native_ads" />

                    <ImageView
                        android:id="@+id/imgFreeApp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:onClick="freeAppClick" />

                    <TextView
                        android:id="@+id/txtFreeApp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/banner_container"
            android:orientation="vertical"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/llprivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/locked" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Bollywood_privacy_policy"
                android:textColor="#000000"
                android:textSize="10sp" />
        </LinearLayout>

        <com.ebanx.swipebtn.SwipeButton
            android:id="@+id/swipe_start"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:button_background="@drawable/downloading_img"
            app:button_image_disabled="@drawable/tapplay_icon"
            app:button_image_enabled="@drawable/tapplay_icon"

            app:button_image_height="50dp"
            app:button_image_width="50dp"
            app:initial_state="enabled"
            app:inner_text="@string/Bollywood_swap"
            app:inner_text_background="@drawable/downloading_img"
            app:inner_text_color="@android:color/white"
            app:inner_text_left_padding="50dp"
            app:inner_text_size="13sp" />

        <LinearLayout
            android:id="@+id/rateus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/rating" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Bollywood_rate_us"
                android:textColor="#000000"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>